default/objects/Customer_Feedback_Settings__c/Customer_Feedback_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Customer Feedback Settings</label>
</CustomObject>