default/objects/Customer_Feedback_Settings__c/fields/Active_Customer_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Active_Customer_Feedback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Customer Feedback</label>
    <type>Checkbox</type>
</CustomField>