default/objects/Customer_Feedback_Settings__c/fields/Active_Google_Translate__c.field-meta.xml
<CustomField>
    <fullName>Active_Google_Translate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Google Translate</label>
    <type>Checkbox</type>
</CustomField>