default/objects/Customer_Feedback_Settings__c/fields/Translation_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Translation_Endpoint__c</fullName>
    <label>Translation Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>